--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,27 +3,18 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
 
 trigger:
-- main
+ - main
 
-resources:
-- repo: self
+pool:
+   vmImage: 'ubuntu-latest' 
 
 variables:
-  tag: '$(Build.BuildId)'
+   imageName: 'AutoMsRewards'
 
-stages:
-- stage: Build
-  displayName: Build image
-  jobs:
-  - job: Build
-    displayName: Build
-    pool:
-      vmImage: ubuntu-latest
-    steps:
-    - task: Docker@2
-      displayName: Build an image
-      inputs:
-        command: build
-        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
-        tags: |
-          $(tag)
+steps:
+ - task: Docker@2
+   displayName: Build an image
+   inputs:
+     repository: $(imageName)
+     command: build
+     Dockerfile: Dockerfile          
